public/css/filters.css
/* most of the complex css here is to animate the filter box open and closed which is a bit tricky with absolute positioning on child elements and from display none */

#filter-box-container:has(:not(#filter-output:empty)){
    height:auto;
    overflow:hidden;
    /* border:2px solid greenyellow; */
    transition: height 0.5s ease;
}

#filter-box-container:has(#filter-output:empty) {
    height:0px;
    overflow:hidden;
    /* border:2px solid red; */
    transition: height 0.5s ease 0.5s; /* delay transition on the way out, also need to try to figure out how to transition height when child elements added */

}


#filter-box:has(#filter-output:empty) {
    display:none;
    transition: display 0.5s allow-discrete;
    transition-delay: 0.5s;
}


#filter-box{
    height: auto;
    border: 2px solid var(--colour-highlight);
    border-radius: 6px;
    position: relative;
    max-width: 600px;
    margin-block:20px;
    margin-inline: auto;
    margin-bottom:40px;
    transition: height 0.5s ease;

    &:has(#clear-filters-btn:hover){
        border: 2px solid var(--colour-contr-warning);
    }

}

#filter-output {
    display:flex;
    flex-wrap: wrap;
    align-items: flex-start;
    gap: 6px;
    padding:16px 10px 8px 10px;
    min-height: calc(var(--btn-size) + 16px + 8px);
    overflow: hidden;
}

.filter-pill {
    font: 1em var(--fs-app);
    border: 2px solid transparent;

    &::before {
        content: "= ";
        font-size: 1.1em;
        padding:0px;
        margin:0px;
    }
}

.filter-pill[data-negate="true"] {
    box-shadow:
        3px 3px 0 0 var(--colour-contr-warning);

    &::before {
        color: var(--colour-contr-warning);
        content: "≠ ";
    }
}

